# MD.Piece

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .vercelignore  CLAUDE.md  COLAB_QUICKSTART.py  Dockerfile  README.md  autoresearch_colab.ipynb  autoresearch_kaggle.ipynb  autoresearch_runner.py  colab_t4_patch.py  fly.toml  main.py  package-lock.json  package.json  program.md  pytest.ini  requirements.txt  requirements_mdpiece.txt  start-doctor.bat  start.ps1  vercel.json
.claude/: launch.json  settings.json  settings.local.json
.github/: pull_request_template.md
.synaptic/: BITACORA.md  DESIGN_DOC.md  ENFORCEMENT.md  INTELLIGENCE.json  MANTRA.md  PROJECT_INIT.synaptic  RULES.md  session.json
api/: github-token.js  index.py
autoresearch-feature-ynJbT/: autoresearch_colab.ipynb
backend/: db.py  dependencies.py  main.py  models.py  requirements.txt  security.py  seed_ema_prompts.py  seed_study_surveys.py
config/: database.py  deploy.py  env.py
context/: README.md  especificacion_frontend_captura.md  ocr_api_contract.md  requisitos_captura_ocr.md
diseases/: ankylosing_spondylitis.yaml  asthma.yaml  behcet_disease.yaml  chronic_urticaria.yaml  idiopathic_pulmonary_fibrosis.yaml  igg4_related_disease.yaml  multiple_sclerosis.yaml  rheumatoid_arthritis.yaml  sjogren_syndrome.yaml  systemic_sclerosis.yaml
docs/: API.md  DEPLOY_FLY.md  SETUP.md  VERCEL_CONNECT_GITHUB.md  design-language.md  inpatient-v2-design-critique.md  migration_admissions_geofence.sql  migration_app_events.sql  (+36 more)
mcp_server/: pyproject.toml  server.py
(+780 files in other folders)
